# jobhunter-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
jobhunter/: __init__.py  cli.py  matcher.py  models.py  profile.py  scraper.py  tracker.py
